--- a/index.html
+++ b/index.html
@@ -1,59 +1,3 @@
-<!--<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <link href="./resources/css/style.css" rel="stylesheet" type="text/css">
-    <title>My Times</title>
-  </head>
-  <body>
-    <div class="container">
-      <div id="logo">
-        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg"/>
-      </div>
-       <h4 id="title">My Times</h4>
-      <nav>
-        <ul class="list">
-          <li><a href="#">World</a></li>
-          <li><a href="#">U.S.</a></li>
-          <li><a href="#">Tech</a></li>
-          <li><a href="#">Science</a></li>
-        </ul>
-      </nav>
-    </div>
-    <div class="hr">
-      <hr />
-    </div>
-  </body>
-</html>-->
-
-
-
-<!--<html>
-  <head>
-    <meta charset="utf-8">
-    <link href="./resources/css/style.css" rel="stylesheet" type="text/css">
-    <title>My Times</title>
-  </head>
-  <body>
-    <header class="top">
-      <div id="logo">
-        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg"/>
-        <span>My Times</span>
-      </div>
-      <nav class="list">
-        <span><a href="#">World</a></span>
-        <span><a href="#">U.S.</a></span>
-        <span><a href="#">Tech</a></span>
-        <span><a href="#">Science</a></span>
-      </nav>
-    </header>
-    <div class="hr">
-      <hr >
-    </div>
-  </body>
-</html>-->
-
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -79,10 +23,64 @@
     <div class="hr">
       <hr />
     </div>
-    <main>
-      <div class="column larg">
-        <span>
+    <div class="content">
+      <div class="column large">
+        <div class="lead-story">
+          <div class="image-content">
+            <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png"/>
+          </div>
+          <p class="narrative">
+            MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.
+          </p>
+        </div>
+        <div class="stories">
+          <div class="story">
+            <div class="text-content">
+              <h2>Orca Spends Vacation at Land World Puget</h2>
+              <p class="narrative">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+            </div>
+            <div class="fall-cancelled-image-content">
+              <span>Earth Spins Backwards for 2017</span>
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png"/>
+            </div>
+          <div class="story">
+            <div class="text-content">
+              <h2>Burger for Breakfast: How Early is too Early?</h2>
+              <p class="narrative">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+            </div>
+            <div class="pop-culture-image-content">
+              <span>Research Shows Cameras Erase Memory</span>
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png"/>
+            </div>
+          </div>
+          </div>
+        </div>
       </div>
-    </main>
+      <div class="column medium">
+        <div class="story">
+          <div class="text-content">
+            <div class="story">
+              <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+              <p class="narrative">WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
+            </div>
+          </div>
+        <div class="story">
+          <div class="cat-ceo-image-content">
+            <span>Cats in Control-Is a Thing?</span>
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png"/>
+          </div>
+          <p class="narrative">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
+        </div>
+      </div>
+      </div>
+      <div class="column small">
+        <img class="cookie" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png">
+        <div class="news-bites">
+          <h3>NEWS BITES</h3>
+          <p class="narrative">Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
